--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  background-color: rgb(233, 235, 238);
+}
 .App {
   text-align: center;
 }
@@ -7,6 +10,11 @@
 
 ul {
   padding-left: 0;
+}
+
+h1 {
+  font-family: Georgia, serif !important; 
+  text-align: center;
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -224,7 +232,6 @@ html {
 
 body {
   color: #404040;
-  background: white;
   font-size: 1rem; }
 
 p,
